--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "zegway",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,13 +7,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.15",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.7"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/material-bottom-tabs": "*",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "*",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "expo": "~47.0.14",
+    "expo-constants": "~14.0.2",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "4.9.2",
+    "react-native-popup-dialog": "*",
+    "react-native-popup-menu": "*",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "*",
+    "react-redux": "*",
+    "redux": "4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
