--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "*",
+    "react-native-video": "^5.2.1",
     "react-redux": "*",
     "redux": "4.0.0"
   },
