--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "~18.0.24",
     "@types/react-dom": "~18.0.8",
     "expo": "~47.0.14",
+    "expo-av": "^13.2.1",
     "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
